--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <p>This is a guessing game, it will give you a number between 0 and 100 and tell you if it is higher or lower</p>
     <form id="input">
-      <button>Submit</button>
+      <input name="number" tpye="text">
+      <button type="submit">Submit</button>
     </form>
+    <section id="text-field"></section>
   </body>
 </html>
